@@ -12,8 +12,6 @@
 ### $Id$
 ###
 
-SHELL = bash
-
 #################################################
 ### verboseness
 #Q	?= 		# be verbose
